@startuml

interface PizzaStore{
    createPizza()
    orderPizza()
}

interface Pizza{
    name
    ingredient_factory
    cheese
    clams
    dough
    pepperoni
    sauce
    veggies

    prepare()
    bake()
    cut()
    box()
    toString()
}

interface Cheese{
    toString()
}

interface Clams{
    toString()
}

interface Dough{
    toString()
}

interface Pepperoni{
    toString()
}

interface Sauce{
    toString()
}

interface Veggies{
    toString()
}

interface PizzaIngredientFactory{
    createCheese()
    createClams()
    createDough()
    createPepperoni()
    createSauce()
    createVeggies()
}

PizzaStore *-- PizzaIngredientsFactory

Pizza o-- Cheese
Pizza o-- Clams
Pizza o-- Dough
Pizza o-- Pepperoni
Pizza o-- Sauce
Pizza o-- Veggies

PizzaStore <|-- ChicagoPizzaStore
PizzaStore <|-- NYPizzaStore

Pizza <|-- CheesePizza
Pizza <|-- ClamPizza
Pizza <|-- PepperoniPizza
Pizza <|-- VeggiePizza

Cheese <|-- MozzarellaCheese
Cheese <|-- ParmesanCheese
Cheese <|-- ReggianoCheese

Clams <|-- FreshClams
Clams <|-- FrozenClams

Dough <|-- ThickCrustDough
Dough <|-- ThinCrustDough

Pepperoni <|-- SlicedPepperoni

Sauce <|-- MarinaraSauce
Sauce <|-- PlumTomatoSauce

Veggies <|-- BlackOlives
Veggies <|-- Garlic
Veggies <|-- Mushroom
Veggies <|-- Onion
Veggies <|-- RedPepper
Veggies <|-- Spinach
Veggies <|-- Eggplant

PizzaIngredientFactory <|-- ChicagoPizzaIngredientFactory
PizzaIngredientFactory <|-- NYPizzaIngredientFactory

@enduml